# Cpp23_Cross_Platform_Vulkan_Example_Cube_Proper

./: CMakeLists.txt  README.md  build.bat  build.cmd  build.sh  vcpkg.json
include/: math.hpp  platform.hpp  vk_app.hpp  vk_check.hpp  vk_device_select.hpp  vk_helpers.hpp  vk_internal.hpp  vk_platform.hpp  vk_state.hpp  vk_validation.hpp
src/: main.cpp  math.cpp  platform.cpp  platform_android.cpp  platform_win32.cpp  platform_xcb.cpp  vk_app.cpp  vk_app_run.cpp  vk_app_setup.cpp  vk_device_select.cpp  vk_helpers.cpp  vk_validation.cpp
